updated dzil config

--- a/dist.ini
+++ b/dist.ini
@@ -3,8 +3,11 @@ author  = nnutter <iam@nnutter.com>
 license = Perl_5
 copyright_holder = nnutter
 copyright_year   = 2012
+abstract = Metrics library inspired by Coda Hale's.
 
 [@Git]
 [@Basic]
 
 [AutoPrereqs]
+[Git::NextVersion]
+
