--- a/dist.ini
+++ b/dist.ini
@@ -3,11 +3,16 @@ author  = nnutter <iam@nnutter.com>
 license = Perl_5
 copyright_holder = nnutter
 copyright_year   = 2012
-abstract = Metrics library inspired by Coda Hale's.
+abstract = (Work in progress) metrics library inspired by Coda Hale's.
 
+[Git::CommitBuild]
+    release_branch = master
+[Git::Tag]
+    branch = master
+[Git::NextVersion]
 [@Git]
-[@Basic]
+[@Filter]
+-bundle = @Basic
+-remove = UploadToCPAN
 
 [AutoPrereqs]
-[Git::NextVersion]
-
