--- a/dist.ini
+++ b/dist.ini
@@ -6,7 +6,9 @@ copyright_year   = 2012
 abstract = Metrics library inspired by Coda Hale's.
 
 [@Git]
-[@Basic]
+[@Filter]
+-bundle = @Basic
+-remove = [UploadToCPAN]
 
 [AutoPrereqs]
 [Git::NextVersion]
