--- a/dist.ini
+++ b/dist.ini
@@ -12,7 +12,8 @@ abstract = (Work in progress) metrics library inspired by Coda Hale's.
 [Git::NextVersion]
 [@Git]
 [@Filter]
--bundle = @Basic
--remove = UploadToCPAN
-
+    -bundle = @Basic
+    -remove = UploadToCPAN
+[CopyTo]
+    dir = ~/git/vagrant/apipe-metrics/files/perl5
 [AutoPrereqs]
